--- a/appspec.yml
+++ b/appspec.yml
@@ -75,6 +75,6 @@ hooks:
   ApplicationStart:
     - location: script/start_application
       timeout: 10
-      runas: root
+      runas: ubuntu
 # During the ValidateService deployment lifecycle event, run the commands 
 #   in the script specified in "location".
